<resources>
    <string name="app_name">Agenda</string>
    <string name="txtNuevaNota" />
    <string name="crear">Crear</string>
    <string name="cancelar">Cancelar</string>
    <string name="NuevaNota">Nueva Nota</string>
    <string name="fecha">Fecha</string>
    <string name="TextoNuevaNota">Introduce la nota</string>
    <string name="Acercade">Acerca de</string>
    <string name="Privacidad">Privacidad</string>
    <string name="Aincroniza">Sincroniza</string>
    <string name="Sincronizar">Sincronizar</string>
    <string name="TituloAgenda">Agenda</string>
    <string name="texto_acerca_de">Esta es una APP que se ha creado para mostrar datos de una agenda.</string>
    <string name="PoliticaPrivacidad">La política de privacidad contiene las normas acerca de cómo se recogen y gestionan los datos personales de los usuarios de una página o sitio web, así como acerca de las cookies utilizadas por el mismo. Este documento está adaptado al Reglamento Europeo de Protección de Datos (RGPD) y a la nueva Ley Orgánica 3/2018, de 5 de diciembre, de Protección de Datos Personales y garantía de los derechos digitales.\nEste documento contiene las menciones o referencias legales que servirán para regular las condiciones en las que el sitio o página web recoge, gestiona y retiene ("trata") los datos personales de los usuarios de Internet que acceden, navegan y utilizan el sitio o página web. También comprende los derechos de los usuarios y las obligaciones del titular del sitio web en relación con el tratamiento de los datos personales.\nEn caso de que se desee elaborar un documento que contenga todas las menciones o referencias legales que servirán para regular las condiciones en las que los usuarios de Internet acceden, navegan y utilizan el sitio o página web, incluyendo los elementos identificativos del titular, se utiliza un aviso legal y condiciones generales de uso. Por otra parte, si se desea elaborar un documento que regule las condiciones en las que se realizan los pedidos o solicitudes de compra en el sitio web, y establecen los derechos, obligaciones y responsabilidades que corresponden a cada parte de dicha compraventa, se utilizan las condiciones generales de venta.</string>
</resources>
